--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -1,17 +1,23 @@
 ﻿@page
 @model IndexModel
 @{
-  Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
+  Layout = "~/Pages/Shared/_LandingLayout.cshtml";
 }
 
-<section class="intro">
-  <div>
-    <h1>Welcome to VizGurka!</h1>
-    <hr>
-    <p>
-      VizGurka is a web application designed to visualize and manage feature specifications and test results.
-      It provides a user-friendly interface to navigate through various
-      features, scenarios, and rules, displaying their descriptions, steps, and test outcomes.
-    </p>
+
+<div class="landing_container">
+  <div class="landing_container_box">
+    <div class="title_box">
+      <img type="image/png" src="~/biggurka.png" alt="VizGurka logo" class="title_box_img" />
+      <h1 class="title_box_title">Welcome to VizGurka!</h1>
+    </div>
+    <div class="test_choice_box">
+      <h2 class="test_choice_box_title">
+        Please choose which test run to review
+      </h2>
+      <div class="text_choice_box_button_container">
+        <button class="button_container_button">One</button>
+        <button class="button_container_button">Two</button>
+      </div>
+    </div>
   </div>
-</section>
