--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -15,10 +15,13 @@
       <h2 class="test_choice_box_title">
         Please choose which test run to review
       </h2>
-      <div class="text_choice_box_link_container">
-        @foreach (var productName in Model.UniqueProductNames)
+      <div class="test_choice_box_link_container">
+        @foreach (var item in Model.UniqueProductNamesWithDates)
         {
-          <a class="link_container_link">@productName</a>
+          <a class="link">
+            <h1 class="link_title">@item.ProductName</h1>
+            <h2 class="link_date">@item.LatestRunDate</h2>
+          </a>
         }
       </div>
     </div>
