--- a/source/VizGurka/wwwroot/css/landing.css
+++ b/source/VizGurka/wwwroot/css/landing.css
@@ -25,10 +25,20 @@
     --color-primary: #005795;
   }
   
+  .html, body {
+    max-width: 100%;
+    max-height: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box;
+  }
+
   body {
     font-family:'atkinson', sans-serif;
     background-color: var(--color-primary);
     color: white;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
   }
 
 .landing_container_box{
@@ -66,4 +76,53 @@
 .test_choice_box_title{
     font-size: 5.5em;
     font-weight: 700;
+}
+
+.test_choice_box{
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    min-height: 100vh;
+    margin-top: 2vh;
+    align-items: center;
+    justify-content: start;
+    gap: 2vw;
+    background: white;
+}
+
+.test_choice_box_title{
+    font-size: 2.5em;
+    font-weight: 700;
+    color: black;
+}
+
+.test_choice_box_link_container{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    max-width: 90vw;
+    gap: 2vw;
+}
+
+.link{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 20vw;
+    height: 20vw;
+    background: var(--color-primary);
+    color: white;
+    border-radius: 10px;
+    text-align: center;
+    gap: 1vw;
+    transition: 0.5s;
+}
+
+.link_img{
+    width: 20vw;
+    height: 10vw;
+    border-radius: 10px;
 }
