--- a/source/VizGurka/wwwroot/css/landing.css
+++ b/source/VizGurka/wwwroot/css/landing.css
@@ -46,7 +46,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vw;
+    width: 100%;
+    overflow: hidden;
 }
 
 .title_box{
@@ -62,6 +63,10 @@
 .title_box_title{
     font-size: 2.5em;
     font-weight: 700;
+}
+
+.title_box_img{
+  margin-left: 2vw;
 }
 
 .test_choice_box{
@@ -91,7 +96,7 @@
 }
 
 .test_choice_box_title{
-    font-size: 2.5em;
+    font-size: 3em;
     font-weight: 700;
     color: black;
 }
@@ -102,27 +107,45 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    max-width: 90vw;
-    gap: 2vw;
+    width: 100%;
+    gap: 4vw;
 }
 
 .link{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 20vw;
+    align-items: left;
+    justify-content: left;
+    width: calc(22vw - 4vw);
     height: 20vw;
     background: var(--color-primary);
     color: white;
     border-radius: 10px;
-    text-align: center;
+    text-align: left;
     gap: 1vw;
     transition: 0.5s;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 10px 0px rgba(0,0,0,0.89);
 }
 
 .link_img{
-    width: 20vw;
-    height: 10vw;
-    border-radius: 10px;
+  width: 100%;
+  height: 10vw;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  object-fit: cover;
+}
+
+.link_title{
+    font-size: 2em;
+    font-weight: 700;
+    padding: 1vw;
+    margin: 0;
+}
+
+.link_date{
+    font-size: 1.5em;
+    font-weight: 400;
+    padding: 1vw;
+    margin: 0;
 }
