--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -18,7 +18,7 @@
       <div class="test_choice_box_link_container">
         @foreach (var item in Model.UniqueProductNamesWithDates)
         {
-          <a class="link">
+          <a class="link" asp-page="/Product/Product" asp-route-productName="@item.ProductName">
             <img id="randomCatImage_@item.ProductName" class="link_img" alt="Random Cat Image" />
             <h1 class="link_title">@item.ProductName</h1>
             <h2 class="link_date">@item.LatestRunDate</h2>
