--- a/source/VizGurka/wwwroot/css/product.css
+++ b/source/VizGurka/wwwroot/css/product.css
@@ -91,3 +91,13 @@
     transform: scale(0.95);
 }
 
+.navbar_search{
+    height: 1em;
+    width: 15vw;
+    border-radius: 10px;
+    font-size: 1em;
+    border-style: none;
+    padding: 10px;
+    margin-left: 1vw;
+}
+
