--- a/source/VizGurka/Pages/Shared/_ProductLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_ProductLayout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewData["Title"] - VizGurka</title>
     <link rel="icon" type="image/png" href="~/favgurka.png" />
     <link rel="stylesheet" href="~/css/product.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/product.css">
+    <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
 </head>
 
 <nav class="navbar">
