--- a/source/VizGurka/wwwroot/css/landing.css
+++ b/source/VizGurka/wwwroot/css/landing.css
@@ -116,6 +116,7 @@
     flex-direction: column;
     align-items: left;
     justify-content: left;
+    text-decoration: none;
     width: calc(22vw - 4vw);
     height: 20vw;
     background: var(--color-primary);
