--- a/source/VizGurka/Pages/Shared/_ProductLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_ProductLayout.cshtml
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - VizGurka</title>
     <link rel="icon" type="image/png" href="~/favgurka.png" />
-    <link rel="stylesheet" href="~/css/product.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/feature-details.css" asp-append-version="true" />
 </head>
 
 <nav class="navbar">
