--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -80,7 +80,6 @@
 }
 
 .feature-dropdown {
-  cursor: pointer;
   padding-left: 10px;
   margin-bottom: 5px;
   display: flex;
@@ -89,6 +88,7 @@
 
 .feature-dropdown h2 {
   margin: 0;
+  
 }
 
 .dropdown-content {
@@ -124,6 +124,12 @@
 .rule_sidebar{
   font-weight: 900;
   font-size: 1.2em;
+}
+
+.status_img{
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
 }
 
 .arrow {
