--- a/source/VizGurka/Pages/Shared/_ProductLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_ProductLayout.cshtml
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="~/favgurka.png" />
     <link rel="stylesheet" href="~/css/sidemenu.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/navbar.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/feature-details.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/feature-content.css" asp-append-version="true" />
 </head>
 
 <nav class="navbar">
