--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -4,6 +4,7 @@
   Layout = "~/Pages/Shared/_LandingLayout.cshtml";
 }
 
+<script src="~/js/catfetcher.js" defer></script>
 
 <div class="landing_container">
   <div class="landing_container_box">
@@ -18,7 +19,8 @@
       <div class="test_choice_box_link_container">
         @foreach (var item in Model.UniqueProductNamesWithDatesAndId)
         {
-          <a class="link" asp-page="/Product/Product" asp-route-productName="@item.ProductName" asp-route-id="@item.Id">
+          <a class="link" asp-page="/Product/Product" asp-route-productName="@item.ProductName" asp-route-id="@item.Id"
+            asp-route-featureId="@item.Id">
             <img id="randomCatImage_@item.ProductName" class="link_img" alt="Random Cat Image" />
             <h1 class="link_title">@item.ProductName</h1>
             <h2 class="link_date">@item.LatestRunDate</h2>
@@ -27,24 +29,3 @@
       </div>
     </div>
   </div>
-
-  <script>
-    async function fetchRandomCatImage(imgId) {
-      try {
-        const response = await fetch('https://api.thecatapi.com/v1/images/search');
-        const data = await response.json();
-        const imageUrl = data[0].url;
-        document.getElementById(imgId).src = imageUrl;
-      } catch (error) {
-        console.error('Error fetching random cat image:', error);
-      }
-    }
-
-    // Fetch a random cat image for each link when the page loads
-    window.onload = function () {
-      const links = document.querySelectorAll('.link_img');
-      links.forEach(link => {
-        fetchRandomCatImage(link.id);
-      });
-    };
-  </script>
