--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -42,11 +42,18 @@
     padding: 0;
   }
 
-  
+.product_section{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+}
 
 .sidemenu {
   display: flex;
   flex-direction: column;
+  min-width: 25vw;
   max-width: 25vw;
   min-height: 100vh;
   background-color: whitesmoke;
