--- a/source/VizGurka/Pages/Product/Product.cshtml
+++ b/source/VizGurka/Pages/Product/Product.cshtml
@@ -1,4 +1,4 @@
-@page "/product/{productName}/{id:guid}/{featureId:guid?}"
+@page "/product/{productName}/{id:guid}/{featureId:guid?}/{rule?}"
 @model VizGurka.Pages.Product.ProductModel
 @{
     Layout = "~/Pages/Shared/_ProductLayout.cshtml";
@@ -28,7 +28,7 @@
                             {
                                 <li class="scenario_link">
                                     <img src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
-                                    <a href="/">@scenario.Name</a>
+                                    <p>@scenario.Name</p>
                                 </li>
                             }
                             @foreach (var rule in feature.Rules)
@@ -36,14 +36,16 @@
                                 <li>
                                     <h3 class="rule_sidebar">
                                         <img src="~/icons/@(IconHelper.GetStatusIcon(rule.Status)).svg" alt="status icon" />
-                                        @rule.Name
+                                        <a asp-page="/product/product" asp-route-productName="@Model.ProductName"
+                                            asp-route-id="@Model.Id" asp-route-featureId="@featureId"
+                                            asp-route-rule="@rule.Name">@rule.Name</a>
                                     </h3>
                                     <ul>
                                         @foreach (var scenario in rule.Scenarios)
                                         {
                                             <li class="scenario_link">
                                                 <img src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
-                                                <a href="/">@scenario.Name</a>
+                                                <p>@scenario.Name</p>
                                             </li>
                                         }
                                     </ul>
@@ -64,19 +66,26 @@
         <div class="content_container">
             @if (Model.SelectedFeature != null)
             {
-                <h1 class="content_container_title">@Model.SelectedFeature.Name</h1>
-                <p class="content_container_status">@Model.SelectedFeature.Status</p>
-                <p class="content_container_duration">Test Duration: @Model.SelectedFeature.TestDuration</p>
+                <div class="content_container_header">
+                    <h1 class="content_container_title">
+                        <img class="container_title_status_img"
+                            src="~/icons/@(IconHelper.GetStatusIcon(@Model.SelectedFeature.Status)).svg"
+                            alt="status icon" />
+                        @Model.SelectedFeature.Name
+                    </h1>
+                    <p class="content_container_duration">Test Duration: @Model.SelectedFeature.TestDuration</p>
+                </div>
                 <h2 class="container_scenarios_title">Scenarios</h2>
-                <ul>
+                <ul class="scenario_list">
                     @foreach (var scenario in Model.SelectedFeature.Scenarios)
                     {
+                        <hr />
                         <h2 class="container_scenario_name">
                             <img class="container_scenario_status_img"
                                 src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
                             @scenario.Name
                         </h2>
-                        <h3 class="container_scenario_duration">Scenario duration: @scenario.TestDuration</h3>
+                        <h3 class="container_scenario_duration"><strong>Scenario duration:</strong> @scenario.TestDuration</h3>
                         @foreach (var step in scenario.Steps)
                         {
                             <div class="container_scenario_step">
@@ -87,33 +96,37 @@
                         }
                     }
                 </ul>
+
                 @if (Model.SelectedFeature.Rules.Any())
                 {
                     @foreach (var rule in Model.SelectedFeature.Rules)
                     {
                         <div class="container_scenario_rule">
-                            <h3 class="scenario_rule_name">@rule.Name</h3>
-                            <p class="scenario_rule_description">@rule.Description</p>
-                            <ul>
-                                @foreach (var scenario in rule.Scenarios)
-                                {
-                                    <h2 class="container_scenario_name">
-                                        <img class="container_scenario_status_img"
-                                            src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
-                                        @scenario.Name
-                                    </h2>
-                                    <h3 class="container_scenario_duration">Scenario duration: @scenario.TestDuration</h3>
-                                    @foreach (var step in scenario.Steps)
-                                    {
-                                        <div class="container_scenario_step">
-                                            <img class="container_scenario_status_img"
-                                                src="~/icons/@(IconHelper.GetStatusIcon(step.Status)).svg" alt="status icon" />
-                                            <strong>@step.Kind</strong> @step.Text
-                                        </div>
-                                    }
-                                }
-                            </ul>
+                            <hr />
+                            <h3 class="scenario_rule_name" id="@rule.Name">Rule: @rule.Name</h3>
+                            <div class="scenario_rule_description" id="scenario_rule_description">
+                                @Model.MarkdownStringToHtml(rule.Description)</div>
                         </div>
+                        <ul class="scenario_list">
+                            @foreach (var scenario in rule.Scenarios)
+                            {
+                                <hr />
+                                <h2 class="container_scenario_name">
+                                    <img class="container_scenario_status_img"
+                                        src="~/icons/@(IconHelper.GetStatusIcon(scenario.Status)).svg" alt="status icon" />
+                                    @scenario.Name
+                                </h2>
+                                <h3 class="container_scenario_duration"><strong>Scenario duration:</strong> @scenario.TestDuration</h3>
+                                @foreach (var step in scenario.Steps)
+                                {
+                                    <div class="container_scenario_step">
+                                        <img class="container_scenario_status_img"
+                                            src="~/icons/@(IconHelper.GetStatusIcon(step.Status)).svg" alt="status icon" />
+                                        <strong>@step.Kind</strong> @step.Text
+                                    </div>
+                                }
+                            }
+                        </ul>
                     }
                 }
             }
@@ -126,3 +139,17 @@
 </section>
 
 <script src="~/js/dropdown.js" defer></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const urlParams = new URLSearchParams(window.location.search);
+        const ruleName = urlParams.get('rule');
+        const featureId = urlParams.get('featureId');
+        if (ruleName && featureId) {
+            const targetId = `${featureId}-${ruleName}`;
+            const targetElement = document.getElementById(targetId);
+            if (targetElement) {
+                targetElement.scrollIntoView({ behavior: "smooth" });
+            }
+        }
+    });
+</script>
