--- a/source/VizGurka/Pages/Product/Product.cshtml
+++ b/source/VizGurka/Pages/Product/Product.cshtml
@@ -7,8 +7,6 @@
     <section>
         <div class="sidemenu">
             <h1 class="sidemenu_title">@Model.ProductName</h1>
-            <p style="background-color: rgb(219, 219, 219); margin: 0;">!Make this menu sticky with scrolling overflow
-                instead!</p>
             <h3 class="sidemenu_date">Generated: @Model.LatestRunDate.ToString("dd MMMM yyyy HH:mm")</h3>
 
             @if (Model.Features != null && Model.Features.Any())
@@ -145,17 +143,4 @@
 </section>
 
 <script src="~/js/dropdown.js" defer></script>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const urlParams = new URLSearchParams(window.location.search);
-        const ruleName = urlParams.get('rule');
-        const featureId = urlParams.get('featureId');
-        if (ruleName && featureId) {
-            const targetId = `${featureId}-${ruleName}`;
-            const targetElement = document.getElementById(targetId);
-            if (targetElement) {
-                targetElement.scrollIntoView({ behavior: "smooth" });
-            }
-        }
-    });
-</script>
+<script src="~/js/scroll.js" defer></script>
