--- a/source/VizGurka/wwwroot/css/feature-content.css
+++ b/source/VizGurka/wwwroot/css/feature-content.css
@@ -7,9 +7,16 @@
   background-color: whitesmoke;
 }
 
+.content_container {
+  margin: 0;
+  padding: 0;
+  width: 70vw;
+}
+
+
 .content_container_header {
   display: flex;
-  width: 100%;
+  width: 70%;
   flex-direction: column;
   font-size: 2.5rem;
   font-weight: 700;
@@ -30,6 +37,7 @@
   margin-bottom: 1rem;
   padding-left: 2vw;
   margin-top: 0;
+  width: 95%;
 }
 
 .container_scenarios_title{
@@ -37,6 +45,7 @@
   font-weight: 700;
   padding-left: 4vw;
   margin-bottom: 1rem;
+  width: 50%;
 }
 
 .container_scenario_rule{
@@ -68,6 +77,7 @@
 
 .scenario_list{
   padding-left: 4vw;
+  width: 50%;
 }
 
 .container_scenario_status_img{
@@ -78,4 +88,8 @@
 .container_title_status_img{
   width: 40px;
   height: 40px;
+}
+
+#scenario_rule_description {
+  scroll-padding-top: 10vh;
 }
