--- a/source/VizGurka/wwwroot/css/sidemenu.css
+++ b/source/VizGurka/wwwroot/css/sidemenu.css
@@ -26,10 +26,12 @@
   }
   
   .html, body {
-    max-width: 100%;
+    max-width: 100vw;
     max-height: 100%;
     overflow-x: hidden;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
 
   body {
@@ -46,19 +48,26 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  left: 0;
   margin: 0;
   padding: 0;
 }
 
 .sidemenu {
   display: flex;
+  position: sticky;
+  top: 10vh;
+  left: 0;
   flex-direction: column;
   min-width: 25vw;
   max-width: 25vw;
-  min-height: 100vh;
-  height: 100%;
+  min-height: 90vh;
+  height: 90vh;
   background-color: whitesmoke;
   border-right: 2px solid rgb(219, 219, 219);
+  overflow-y: scroll;
 }
 
 .sidemenu_title{
