--- a/source/VizGurka/Pages/Index.cshtml
+++ b/source/VizGurka/Pages/Index.cshtml
@@ -1,17 +1,31 @@
 ﻿@page
 @model IndexModel
 @{
-  Layout = "~/Pages/Shared/_FeaturesLayout.cshtml";
+  Layout = "~/Pages/Shared/_LandingLayout.cshtml";
 }
 
-<section class="intro">
-  <div>
-    <h1>Welcome to VizGurka!</h1>
-    <hr>
-    <p>
-      VizGurka is a web application designed to visualize and manage feature specifications and test results.
-      It provides a user-friendly interface to navigate through various
-      features, scenarios, and rules, displaying their descriptions, steps, and test outcomes.
-    </p>
+<script src="~/js/catfetcher.js" defer></script>
+
+<div class="landing_container">
+  <div class="landing_container_box">
+    <div class="title_box">
+      <img type="image/png" src="~/biggurka.png" alt="VizGurka logo" class="title_box_img" />
+      <h1 class="title_box_title">Welcome to VizGurka!</h1>
+    </div>
+    <div class="test_choice_box">
+      <h2 class="test_choice_box_title">
+        Please choose which test run to review
+      </h2>
+      <div class="test_choice_box_link_container">
+        @foreach (var item in Model.UniqueProductNamesWithDatesAndId)
+        {
+          <a class="link" asp-page="/Product/Product" asp-route-productName="@item.ProductName" asp-route-id="@item.Id"
+            asp-route-featureId="@item.Id">
+            <img id="randomCatImage_@item.ProductName" class="link_img" alt="Random Cat Image" />
+            <h1 class="link_title">@item.ProductName</h1>
+            <h2 class="link_date">@item.LatestRunDate</h2>
+          </a>
+        }
+      </div>
+    </div>
   </div>
-</section>
