Refactor layout structure

--- a/source/VizGurka/Pages/Shared/_Layout.cshtml
+++ b/source/VizGurka/Pages/Shared/_Layout.cshtml
@@ -1,20 +1,28 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>@ViewData["Title"] - VizGurka</title>
-  <link rel="icon" type="image/png" href="~/favgurka.png" />
-  <link rel="stylesheet" href="~/css/landing.css" asp-append-version="true" />
-  <link rel="stylesheet" href="~/css/landing.css">
+  <link rel="icon" type="image/png" href="~/favgurka.png"/>
+  <link rel="stylesheet" href="~/css/vizgurka.css" asp-append-version="true"/>
+  <link rel="stylesheet" href="~/@(nameof(VizGurka)).styles.css">
 </head>
-
 <body>
-  <main>
-    @RenderBody()
-  </main>
-  @await RenderSectionAsync("Scripts", required: false)
+<nav class="navigation">
+  <img src="~/favgurka.png" alt="icon for SpecGurka">
+  <hr/>
+  <a href="@Url.Page("/Index")">
+    <img src="~/icons/test.svg" alt="test-glass icon">
+  </a>
+  <hr/>
+  <a href="@Url.Page("/Analytics/Index")">
+    <img src="~/icons/analytics.svg" alt="analytics icon">
+  </a>
+</nav>
+<main>
+  @RenderBody()
+</main>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
-
 </html>
