Searching now succesfully brings you to /search

--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -25,9 +25,15 @@
     <link rel="stylesheet" href="~/css/feature-content.css" asp-append-version="true" />
 </head>
 
+<script src="~/js/search.js"></script>
+
 <nav class="navbar">
     <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo" />
-    <input class="navbar_search" type="text" id="navbar_search" placeholder="&#x1F50D; Features, Repositories..." />
+    <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
+        <input type="hidden" id="productName" name="productName" value="YourDefaultProductName" />
+        <input class="navbar_search" type="text" id="navbar_search" name="query"
+            placeholder="&#x1F50D; Features, Scenarios..." />
+    </form>
     <ul class="navbar_links">
         <li class="navbar_links_link"><a class="@GetNavLinkClass("/features/features")" asp-page="/features/features"
                 asp-route-productName="@Model.ProductName" asp-route-id="@Model.Id">@Model.nav_features</a></li>
