--- a/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_FeaturesLayout.cshtml
@@ -30,7 +30,7 @@
 <nav class="navbar">
     <img class="navbar_img" src="~/biggurka.png" alt="Gurka Logo" />
     <form id="searchForm" class="navbar_search_form" method="get" onsubmit="return handleSearch(event)">
-        <input type="hidden" id="productName" name="productName" value="YourDefaultProductName" />
+        <input type="hidden" id="productName" name="productName" value="@Model.ProductName" />
         <input class="navbar_search" type="text" id="navbar_search" name="query"
             placeholder="&#x1F50D; Features, Scenarios..." />
     </form>
