--- a/source/VizGurka/Pages/Shared/_SearchLayout.cshtml
+++ b/source/VizGurka/Pages/Shared/_SearchLayout.cshtml
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - VizGurka</title>
     <link rel="icon" type="image/png" href="~/favgurka.png" />
-    <link rel="stylesheet" href="~/css/landing.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/landing.css">
+    <link rel="stylesheet" href="~/css/search.css" asp-append-version="true" />
+
 </head>
 
 <body>
