--- a/source/VizGurka/wwwroot/css/search.css
+++ b/source/VizGurka/wwwroot/css/search.css
@@ -88,9 +88,149 @@
   line-height: 1.5;
 }
 
+/* Dropdown container */
+.dropdown {
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Dropdown header */
+.dropdown-header {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+}
+
+/* Dropdown content */
+.dropdown-content {
+  max-height: 0;
+  overflow: hidden;
+  padding: 0 10px;
+  transition: max-height 0.5s ease-out;
+}
+
+.dropdown-content ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-left: 0;
+  gap: 5px;
+}
+
+.dropdown-content ul li {
+  flex-basis: 40%;
+}
+
+.dropdown-content ul a {
+  margin-bottom: 5px;
+  font-size: 1.5em;
+  font-weight: 700;
+  color: var(--color-primary);
+}
+
+.dropdown-content ul h2 {
+  margin-bottom: 5px;
+  font-size: 1.3em;
+  font-weight: 700;
+  color: black;
+}
+
+.dropdown-content.show {
+  max-height: fit-content;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: whitesmoke;
+}
+
+/* Arrow styles */
+.arrow {
+  border: solid black;
+  border-width: 0 5px 5px 0;
+  display: inline-block;
+  padding: 6px;
+  margin-right: 10px;
+  transition: transform 0.3s;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+/* List styles */
+.dropdown-content ul {
+  list-style-type: none;
+  padding-left: 0;
+  gap: 5px;
+}
+
+.dropdown-content ul li {
+  margin-bottom: 5px;
+  font-size: 1.1em;
+  font-weight: 700;
+}
+
 .search_title{
     padding: 20px;
     margin-top: 5vh;
     color: black;
     margin: 0;
+    font-size: 1.5em;
+}
+
+.wrapper{
+    display: flex;
+    flex-direction: row;
+}
+
+.search_menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20vw;
+    max-width: 20vw;
+    min-height: 90vh;
+    background-color: whitesmoke;
+    border-right: 1px solid rgb(219, 219, 219);
+}
+
+.search_display{
+  display: flex;
+  flex-direction: column;
+  width: 80vw;
+  max-width: 80vw;
+}
+
+.search_category {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Ensure vertical alignment */
+  gap: 5vw;
+  font-size: 1.5em;
+  text-decoration: underline;
+}
+
+.count {
+  color: white;
+  font-size: 0.8em;
+  background-color: rgb(128, 128, 128);
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  padding: 0px 6px; /* Increase padding to make the background larger */
+  line-height: 1.5; /* Ensure vertical alignment with the text */
 }
